Mise à jour du code

--- a/index.html
+++ b/index.html
@@ -12,10 +12,13 @@
     </head>
     <body>
         <canvas id="canvas">
-            <img src="image1.jpg" alt="Image" />
+            <img src="images/image1-large.jpg" alt="Image" />
         </canvas>
         
-        <output id="loading"></output>
+        <button id='save'>Save</button>
+        <button id='start'>Start</button>
+        <p id="loading"></p>
+        <a href="#" id="download" download></a>
         
         <script src="./index.js"></script>
     </body>
